syntax = "proto3";

package greeter.v1;

option go_package = "github.com/hrz8/altalune/gen/greeter/v1;greeterv1";

import "buf/validate/validate.proto";

message SayHelloRequest {
  string name = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string = {
      min_len: 3,
      max_len: 50,
      pattern: "^[A-Za-z0-9_-]+$"
    }
  ];
}

message SayHelloResponse {
  string message = 1;
}
