syntax = "proto3";

package greeter.v1;

option go_package = "github.com/hrz8/altalune/gen/greeter/v1;greeterv1";

import "buf/validate/validate.proto";
import "greeter/v1/common.proto";

message GetAllowedNamesRequest {
  int32 page = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int32 = {
      gt: 0
    }
  ];
  int32 limit = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).int32 = {
      gt: 0,
      lte: 100
    }
  ];
}

message GetAllowedNamesResponse {
  repeated string names = 1;
  PaginationMeta meta = 2;
}